[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiro-social-governance"
version = "1.0.0"
description = "Multi-Agent Social Governance Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "openai",
    "httpx",
    "pytest",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
